--- a/Documentation/devicetree/bindings/arm/qcom.yaml
+++ b/Documentation/devicetree/bindings/arm/qcom.yaml
@@ -135,6 +135,7 @@ properties:
 
       - items:
           - enum:
+              - samsung,expressatt
               - qcom,msm8960-cdp
           - const: qcom,msm8960
 
