--- a/Documentation/devicetree/bindings/arm/qcom.yaml
+++ b/Documentation/devicetree/bindings/arm/qcom.yaml
@@ -136,6 +136,7 @@ properties:
       - items:
           - enum:
               - samsung,expressatt
+              - sony,mint
               - qcom,msm8960-cdp
           - const: qcom,msm8960
 
